--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -55,6 +55,22 @@ body {
   @apply xs:text-lg sm:text-2xl md:text-3xl;
 }
 
+.heading-sm {
+  @apply text-md sm:text-xl md:text-2xl;
+}
+
+.font-size-xl {
+  @apply text-md sm:text-lg md:text-xl leading-normal;
+}
+
 .font-size-md {
   @apply text-xs sm:text-md md:text-lg leading-normal;
+}
+
+.font-size-sm {
+  @apply text-xs sm:text-sm md:text-md leading-normal;
+}
+
+.font-size-xs {
+  @apply text-xs sm:text-xs md:text-sm leading-normal;
 }
