--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -51,6 +51,10 @@ body {
   @apply text-3xl sm:text-5xl md:text-8xl;
 }
 
+.heading-lg {
+  @apply text-3xl sm:text-4xl md:text-5xl;
+}
+
 .heading-md {
   @apply xs:text-lg sm:text-2xl md:text-3xl;
 }
